--- a/package.json
+++ b/package.json
@@ -21,33 +21,42 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.4.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/event-emitter": "^1.0.0",
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.0.1",
-    "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/sequelize": "^8.0.0",
+    "bull": "^4.1.0",
     "cache-manager": "^3.5.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "joi": "^17.4.2",
     "mysql2": "^2.3.3-rc.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.39"
+    "sequelize": "^6.9.0",
+    "sequelize-typescript": "^2.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.2.0",
+    "@types/bull": "^3.15.5",
     "@types/cache-manager": "^3.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/joi": "^17.2.3",
     "@types/node": "^16.0.0",
+    "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
